# AI-TuKu

./: .env.example  .gitattributes  .gitignore  BUG记录.md  README.md  docker-compose.yml  pom.xml  wrangler.jsonc  优化升级.md  后端开发过程中的记录.md  图片模块开发步骤.md  学习路线与面试宝典.md  开发记录文档.md  简历评估文档.md  简历项目描述.md  面试考察文档.md
.github/workflows/: deploy.yml  test.yml
AI-TUKU-VIO-BE/: .dockerignore  Dockerfile  pom.xml  后端开发过程中的记录.md
AI-TUKU-VIO-BE/sql/: archive_table.sql  create_table.sql  index_optimization.sql  optimization_check.sql  test_data.sql
AI-TUKU-VIO-FE/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  openapi.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  前端开发过程中的记录.md
AI-TUKU-VIO-FE/e2e/: user-journey.spec.ts
AI-TUKU-VIO-FE/k6/: picture-api-load-test.js
AI-TUKU-VIO-FE/src/: main.ts  request.ts
AI-TUKU-VIO-FE/src/api/: pictureController.ts  spaceAnalyzeController.ts  spaceController.ts  (+2 more)
AI-TUKU-VIO-FE/wasm/: Cargo.toml  README.md  build.sh
AI-TUKU-VIO-FE/wasm/src/: lib.rs
AI-TUKU-vio-BE/: README.md  开发记录文档.md
AI-TUKU-vio-BE/sql/: create_table.sql
AI-TUKU-vio-FE/: eslint.config.js  package-lock.json  package.json  前端开发过程中的记录.md
AI-TUKU-vio-FE/src/: App.vue  request.ts
FE/: README.md
deploy/: deploy.sh  webhook-setup.md
开发步骤/: 1-项目总览开发步骤.md  10-图库分析开发步骤.md  11-团队空间开发步骤.md  12-图片协同编辑开发步骤.md  13-DDD重构开发步骤.md  14-部署上线开发步骤.md  2-项目初始化开发步骤.md  3-用户模块开发步骤.md  5-用户传图模块开发步骤.md  6-图片优化模块开发步骤.md  7-空间模块开发步骤.md  8-图片功能扩展开发步骤.md  9-AI图片编辑开发步骤.md
(+381 files in other folders)
